--- a/first-web/photo/styles.css
+++ b/first-web/photo/styles.css
@@ -10,6 +10,7 @@
     overflow-x:hidden;
     overflow-y:auto;
     perspective:10px;
+    
 }
 
 .container{
@@ -19,6 +20,7 @@
     align-items:center;
     height:100%;
     transform-style: preserve-3d;
+    z-index: -1;
     
 }
 
@@ -35,4 +37,69 @@
     height:100%;
     width:100%;
     z-index:-1;
+    object-fit: cover;
 }
+h1{
+    position: absolute;
+    font-size: 7rem;
+    color: aliceblue;
+    text-shadow: 5px 5px 5px gray;
+    top:60px;
+    
+    
+letter-spacing: 5px;
+   
+}
+
+    .text{
+        padding: 4rem;
+        font-size: 1rem;
+        margin:2rem 0;
+
+    }
+    
+
+
+section{
+    background-color: rgba(45,45,45);
+    color:white;
+    padding:5rem 0; 
+    position: relative;
+}
+.bg{
+     position: relative; 
+    width: 100%;
+    height: 70vh;
+    background-attachment: fixed;
+    background-size: cover;;
+    background-position: center;
+
+    
+}
+.des {
+    position: absolute;
+    align-items: center;
+
+   background-color: rgb(218, 230, 230);
+    color:black;
+    font-size: 3rem;
+    left :45%;
+    top: 50%;
+
+
+}
+  .bg1{
+    background-image: url("sport-1.jpg");
+
+  }
+
+  .bg2{
+    background-image: url("sport-2.jpg");
+    width: 100%;
+  }
+
+  .bg3{
+    background-image: url("sport-3.jpg");
+    width: 100%;
+  }
+
