--- a/day5-project/index.css
+++ b/day5-project/index.css
@@ -1,9 +1,11 @@
-
+@import url('https://fonts.googleeapis.com/css2?family=Be+Vietnam+Pro:wght@300&display=swap');
 *{
 
 padding: 0%;
 margin: 0%;
 box-sizing: border-box;
+scroll-behavior: smooth;
+font-family: "Be Vietnam Pro", sans-serif;
 
 }
 
@@ -13,3 +15,312 @@ box-sizing: border-box;
     overflow-x: hidden;
 
 }
+
+.container{
+    width:1200px;
+    margin:0 auto
+}
+.navbar{
+    display:flex;
+    justify-content: space-between;
+align-items: center;
+justify-content: baseline;
+padding-top:1rem;
+}
+.logo-text{
+    margin-left:-15px;
+    font-size: 35px;
+    margin-top: 4px;
+}
+
+.logo-container{
+    
+    display: flex;
+   
+    justify-content: baseline;
+    align-items: center;
+    
+
+}
+#logo {
+    
+    width:85px;
+
+}
+.nav-items{
+    display:flex;
+    gap:2rem;
+    padding:20px
+    
+}
+
+.nav-items div{
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    
+}
+
+.nav-items  a{
+    text-decoration: none ;
+    color:black;
+   
+}
+
+.nav-items div:hover{
+ /* font-weight:bold; */
+transition:  0.5s ;
+text-shadow: 0.3px 0.3px  black;
+}
+
+
+.hero-section{
+    position:relative;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+    gap:1rem;
+    margin :4rem auto;
+    padding:0  1rem;
+    padding-bottom:8rem;
+}
+ 
+.hero-section-heading{
+    font-size:35px;
+    color: rgb(69, 67, 67);
+    margin:3rem ;
+    margin-right:2rem;
+
+
+}
+
+.role{
+    color:rgb(12, 43, 148);
+    font-size:40px;
+
+}
+
+
+.hero-section-description{
+    font-weight: 500;
+    margin: 2rem auto;
+font-size: 15px;
+    width:70%;
+}   
+
+
+
+
+.section-bottom{
+    position: absolute;
+    user-select: none;
+    font-size: 5rem;
+    color: rgb(177, 184, 190);
+   bottom: -13.5%;
+   left: 9%;
+   font-weight: bold;
+}
+
+.hero-section-right{
+    height:500px;
+    ;
+}
+
+
+.user-img {
+    position: relative;
+    
+    padding:2.5rem;
+    filter: grayscale(0);
+    transition: all 1s;
+    animation:scaleImage 10s linear infinite;
+
+    
+}
+.user-img img {
+    width:300px;
+    z-index: -9;
+}
+
+@keyframes scaleImage {
+    0%{
+        transform:scale(1);
+        filter:grayscale(0);
+
+    }
+    50%{
+        transform:scale(1.1);
+        box-shadow: 3px 3px 10px black;
+        filter:grayscale(1);
+
+    }
+    100%{
+        transform:scale(1);
+        filter:grayscale(0);
+
+    }
+}
+
+
+.absolute{
+    position:absolute
+}
+.portfolio-circle{
+    position:absolute;
+    top:60%;
+    z-index: 9;
+    animation:circle 8s linear infinite;
+}
+
+.portfolio-cube{
+    position:absolute;
+    top:-2%;
+    right:1%;
+    animation:cube 8s linear infinite;
+}
+.portfolio-zigzags{
+    
+    top:-1%;
+    left:66%;
+    z-index:9;
+    animation: zigzag 10s linear infinite;
+}
+
+.portfolio-dots{
+    z-index: 9;
+    position:absolute;
+    top:58%;
+    left:94%;
+    animation:dot 8s linear infinite;
+}
+.portfolio-plus{
+    position:absolute;
+    top:-2%;
+    right:15%;
+    z-index: -9;
+    transition:all 1s;
+    animation:move 8s linear infinite;
+}
+@keyframes move {
+0%{
+    transform:translateY(0px);
+    z-index: -9;
+}
+
+
+50%{
+    transform:translateY(10px);
+    
+} 
+100%{
+    transform:translateY(-8px);
+    
+}  
+
+}
+
+@keyframes zigzag {
+    0%{
+        transform:translateY(0px);
+    }
+    
+    
+    50%{
+        transform:translateY(10px);
+        
+    } 
+    100%{
+        transform:translateY(1px);
+        
+    }  
+    
+    }
+    @keyframes cube {
+        0%{
+            transform:translateY(0px);
+            transform: rotateY();
+        }
+        
+        
+        50%{
+            transform:translateY(10px);
+            transform:translateX(15px);
+            transform: rotateY(180deg);
+            
+        } 
+        100%{
+            transform:translateY(13px);
+            transform: rotateY(360deg);
+            
+            
+        }  
+        
+        }
+
+
+        @keyframes dot {
+            0%{
+                transform:translateY(0px);
+                transform: rotateY();
+            }
+            
+            
+            50%{
+                transform:translateY(8px);
+                transform:translateX(5px);
+                
+                
+            } 
+            100%{
+                transform:translateY(4px);
+                transform:translateX(8px);
+                transform: rotateY(360deg);
+                
+                
+            }  
+            
+            }
+
+            @keyframes circle {
+                0%{
+                    top:61%;
+                    left:69%;
+                }
+                
+                
+                50%{
+                    
+                    top:58%;
+                    left:69% ;
+                    transform: rotateY(180deg);
+                    
+                } 
+                100%{
+                    top:58%;
+                    left:70%;
+                    
+                    
+                }  
+                
+                }
+
+                .project-section{
+                    background-color: rgb(177, 184, 190);
+                    margin:4rem;
+                }
+
+                .page-header{
+                    color:var(--bgOrange);
+                    font-size:90px;
+                    text-align:Center;
+                    padding-top:30px;
+                }
+
+                .project-container{
+                    display:flex;
+                    max-width:1200px;
+                    margin: 0 auto;
+                    padding :3rem 0;
+                    flex-direction: column;
+                }
