--- a/day5-project/index.css
+++ b/day5-project/index.css
@@ -169,6 +169,7 @@ font-size: 15px;
 .portfolio-circle{
     position:absolute;
     top:60%;
+    left:68%;
     z-index: 9;
     animation:circle 8s linear infinite;
 }
@@ -191,7 +192,7 @@ font-size: 15px;
     z-index: 9;
     position:absolute;
     top:58%;
-    left:94%;
+    left:96%;
     animation:dot 8s linear infinite;
 }
 .portfolio-plus{
@@ -211,10 +212,13 @@ font-size: 15px;
 
 50%{
     transform:translateY(10px);
+   top:-3 ;
+   right:16%;
     
 } 
 100%{
-    transform:translateY(-8px);
+    transform:translateY(0px);
+
     
 }  
 
@@ -228,6 +232,8 @@ font-size: 15px;
     
     50%{
         transform:translateY(10px);
+        top:-3;
+        
         
     } 
     100%{
@@ -267,6 +273,7 @@ font-size: 15px;
             
             
             50%{
+                top:60%;
                 transform:translateY(8px);
                 transform:translateX(5px);
                 
@@ -284,21 +291,21 @@ font-size: 15px;
 
             @keyframes circle {
                 0%{
-                    top:61%;
+                    top:60%;
                     left:69%;
                 }
                 
                 
                 50%{
                     
-                    top:58%;
-                    left:69% ;
+                    top:57%;
+                    left:71%;
                     transform: rotateY(180deg);
                     
                 } 
                 100%{
-                    top:58%;
-                    left:70%;
+                    top:60%;
+                    left:69%;
                     
                     
                 }  
@@ -306,7 +313,7 @@ font-size: 15px;
                 }
 
                 .project-section{
-                    background-color: rgb(177, 184, 190);
+                    background-color: rgb(197, 202, 207);
                     margin:4rem;
                 }
 
@@ -323,4 +330,171 @@ font-size: 15px;
                     margin: 0 auto;
                     padding :3rem 0;
                     flex-direction: column;
+                    gap:120px;
+                }
+                .project-card{
+                     width:90%;
+                     height:550px;
+                     background-image: url("projects/Project1.png");
+                     background-size: cover;
+                     background-repeat: no-repeat;
+                     position:relative;
+                     box-shadow: 0px 0px 40px #1f1f1f;
+                     z-index:9
+                     
+                }
+                #project2{
+
+                  background-image: url("projects/Project2.png");
+                  margin-left: 120px;
+                }
+
+                #project3{
+
+                    background-image: url("projects/Project3.png");
+                  }
+
+                  #project4{
+                    margin-left: 120px;
+                    background-image: url("projects/Project4.png");
+                  }
+
+                 .project-card::after
+                 {content:"";
+                    position:absolute;
+                    top: 0;
+                    left: 0;
+                    right:0;
+                    bottom:0;
+                    background-color: #1f1f1f9a;
+                    transform: scaleX(1);
+                 
+                
+                    
+                    
+                
+
+
+
+                 }
+                .project-card::before{
+                    content:"";
+                    position:absolute;
+                    top: 0;
+                    left: 0;
+                    right:0;
+                    bottom:0;
+                    z-index: 1;
+                    background-image:linear-gradient(to right ,#686d8a9a , #293264be ,#4754947c);
+                    transform:scaleX(0);
+                    transform-origin: left;
+                    transition: all 0.3s;
+                }
+
+                .project-card:hover::before{
+                    transform: scaleX(1);
+                    background-color: #2c2b2b9a;
+                }
+
+                 .project-number-right{
+                    position:absolute;
+                    font-size:200px;
+                    font-weight: 600;
+                    color: white;
+                    z-index:10;
+                     top:-43px;
+                    right:-7px;
+                    display:none;
+                }
+
+               
+             
+                .project-number-left{
+                    position:absolute;
+                    font-size:200px;
+                    font-weight: 600;
+                    color: white;
+                    z-index:10;
+                    top:-7%;
+                    display: none;
+                    
+                }
+
+                .project-number{
+                    transition: all 0.4s;
+                }
+
+                .project-card:hover .project-number{
+                      
+                       display:block;
+                }
+                .project-content{
+                    position:absolute;
+                    display:flex;
+                    flex-direction:column;
+                    color:white;
+                    padding:2rem;
+                    bottom: 20%;
+                    z-index:3;
+                    gap:1em;
+                    margin-left: 45px;
+                    transition:all 0.4;
+                }
+                
+                .project-skill-container{
+                    width:60%;
+                    display:flex;
+                    gap:10px;
+                    flex-wrap:wrap;
+                }
+                   .project-skill{
+                    width:40px;
+                   }
+                .project-heading{
+                    font-size:50px;
+                    font-weight:bold;
+                    line-height:3rem;
+                }
+                .project-subHeading{
+                    width:70%;
+                    font-size: 16px;
+                    font-style: italic;
+                }
+
+                .btn-grp{
+                   margin: auto 1.5rem;
+                    align-items:center;
+                    
+
+                    
+
+                }
+                .btn-project{
+                    height:35px;
+                    border: none;
+                    width: 85px;
+                    
+                    background-color: rgba(250, 81, 9, 0.726);
+                    font-weight: 600;
+                }
+                .btn-project:hover{
+                    color:white;
+                    background-color: black;
+                    border: none;
+                }
+                .icon{
+                    cursor:pointer;
+                    color:white;
+                    margin-left:10px;
+                    font-size: 25px;
+                    transition:  0.4;
+                    
+                    
+                }
+
+                .icon:hover{
+                    color: var(--bgOrange);
+                }
+                .project-card:hover .project-content  {
+                    transform:scale(1.1);
                 }
